--- a/index.html
+++ b/index.html
@@ -11,10 +11,22 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container wrapper">
+      <div class="jumbotron text-center">
+        <h1>New York Times Search</h1>
+      </div>
 
+      <div class="jumbotron">
+        <p>Search Parameters</p>
+      </div>
+
+      <div class="jumbotron">
+        <p>Top Articles</p>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
