--- a/index.html
+++ b/index.html
@@ -5,18 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NYT - Article Search</title>
 
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Cardo"
+      rel="stylesheet"
+    />
+    <!-- IonIcons -->
+    <link
+      href="https://unpkg.com/ionicons@4.4.4/dist/css/ionicons.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Bootstrap -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container wrapper">
       <div class="jumbotron text-center">
-        <h1>New York Times Search</h1>
+        <h1><i class="icon ion-md-paper"></i> New York Times Search</h1>
       </div>
 
       <div class="jumbotron">
