Color scheme update

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
       <div class="jumbotron">
         <h4><i class="icon ion-md-copy icon-h4"></i>Top Articles</h4>
+        <div id="articles"></div>
       </div>
     </div>
     <script
